# TinyCR

./: .dockerignore  .gitignore  Dockerfile  Doxyfile  README.md  docker-compose.yml
altDockerfiles/: DockerfileUbuntu
docs/: Doxyfile  LICENSE.rst  conf.py  index.rst  install.rst
html/: md__r_e_a_d_m_e.html  pages.html
include/: Binary_Control_Plane.h  Binary_Data_Plane.h  CRIoT.h  ClientSock.h  ClientSocket.h  ServerSocket.h  Socket.h  TinyCRClient.h  TinyCRServer.h  bloom_filter.h  common.h  control_plane_othello.h  cuckoo.h  data_plane_othello.h  disjointset.h  farmhash.h  hash.h  input_types.h  lfsr64.h
latex/: refman.tex
src/: CMakeLists.txt  ClientSock.cpp  ClientSocket.cpp  Makefile  MakefileOld  ServerSocket.cpp  Socket.cpp  TinyCRClient.cpp  TinyCRServer.cpp  client  client.cpp  common.cpp  cuckoo.cpp  farmhash.cpp  input_types.cpp  mockCA  mockCA.cpp  platform_test.cpp  server  server.cpp  serverOld.cpp  simple_client  simple_server
src/Socket/: CMakeLists.txt  ClientSock.cpp  ClientSock.h  ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
src/TinyCR/: TinyCRClient.h  TinyCRServer.h
src/platform/: Binary_Control_Plane.h  Binary_Data_Plane.h  CRIoT.h  DASS_Tracker.h  DASS_Verifier.h  bloom_filter.h  control_plane_othello.h  cuckoo.h
src/utils/: CMakeLists.txt  common.cpp  common.h  hash.h  helpers.cpp  helpers.h  input_types.cpp  perf_tool.cpp  perf_tool.h
tests/: docker_test.py  negative_insert_client_server_perf.csv  negative_insert_perf.csv  negative_move_client_server_perf.csv  negative_move_perf.csv  (+8 more)
(+528 files in other folders)
